--- a/index.html
+++ b/index.html
@@ -37,16 +37,18 @@ Ich habe das Logo als Überschrift genommen, da es der selbe Schriftzug ist
 <img src = "One_Piece_Logo.svg.png" alt="One Piece">
 </p>
 
-<button class="button button1" onclick="window.location.href='https://opwiki.org/'";"" target="_blank">One Piece WIKI</button>
+<button class="button button1" onclick="window.location.href='https://onepiece.fandom.com/de/wiki/OnePiecePedia:Willkommen'";"" target="_blank">One Piece WIKI</button>
 
 <h2 style = "font-size:50px; padding-top:20px; color:lightblue; font-family:Brush Script MT;">Einige Charaktere</h2>
 
-<img src = "images.jpeg" alt = "BILD" width="200" height="100" style="border:3px solid #000000; padding:3px; margin:5px">
-<img src = "one-piece-r43.png" alt = "BILD" width="200" height="100" style="border:3px solid #000000; padding:3px; margin:5px">
-<img src = "images.ong.jfif" alt = "BILD" width="200" height="100" style="border:3px solid #000000; padding:3px; margin:5px">
-
+<a href="https://onepiece.fandom.com/wiki/Tama" target ="_blank"> <img src = "images.jpeg" alt = "BILD" width="200" height="100" style="border:3px solid #000000; padding:3px; margin:5px"></a>
+<a href="https://onepiece.fandom.com/wiki/Monkey_D._Luffy" target ="_blank"><img src = "one-piece-r43.png" alt = "BILD" width="200" height="100" style="border:3px solid #000000; padding:3px; margin:5px"></a>
+<a href="https://onepiece.fandom.com/de/wiki/Roronoa_Zoro" target ="_blank"><img src = "images.ong.jfif" alt = "BILD" width="200" height="100" style="border:3px solid #000000; padding:3px; margin:5px"></a>
 
 </center>
+
+<p style = "font-size:50px; padding-top:1000px; color:darkgreen; font-family:Brush Script MT;"> Credits to Eiichiro Oda and Toei Animation Co., Ltd</p>
+
 </body>
 
 
